--- a/GitTest/src/main/webapp/ex01.html
+++ b/GitTest/src/main/webapp/ex01.html
@@ -9,6 +9,8 @@
 	<h1>팀장 첫 번째 커밋</h1>
 	<h1>팀원1 두번째 커밋</h1>
 	<h1>팀원2 세번째 커밋</h1>
-	<!-- 그럼 주석은? -->
+	<!-- 그럼 주석은? 주석도 pull, push 됨-->
+	<!-- 개행은? -->
+
 </body>
 </html>
